@@ -1,3 +1,6 @@
+2007-02-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* recover-src/extract_list.c: Remove match for path_on_disk_slash.
+
 2007-02-20  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/stream.c, common-src/util.c: Pass exact socklen_t to
 						  bind and connect call.
